# HDR

./: .gitignore  CMakeLists.txt  HdrCompute.cpp  HdrCompute.hpp  Makefile  README.md  hdr  main.cpp
include/: HdrCompute.hpp
src/: CMakeLists.txt  HdrCompute.cpp
